--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
-    "expo": "~43.0.2",
-    "expo-file-system": "~13.0.3",
-    "expo-image-picker": "~11.0.3",
-    "expo-location": "~13.0.4",
-    "expo-permissions": "~13.0.3",
-    "expo-sqlite": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^44.0.0",
+    "expo-file-system": "~13.1.4",
+    "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
+    "expo-permissions": "~13.1.0",
+    "expo-sqlite": "~10.1.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-geolocation-service": "^5.3.0-beta.3",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-maps": "0.28.1",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
